@@ -7,6 +7,7 @@
 	* Changed tx_solr_Template to tolerate if viewhelpers could not be loaded
 	* Added support for named loops in tx_solr_Template
 	* Added support for conditions in loops
+	* Changed tx_solr_Template to accept markers in whatver notation
 
 2010-09-14  Markus Goldbach  <markus.goldbach@dkd.de>
 
